# ParallelProgramming

./: .gitignore  chpl-prep  prep-chapl
assignments/1/: .gitignore  CMakeLists.txt  Makefile  qsort  qsort.c  task-queue.c
assignments/1/origin/: Makefile
assignments/1/src/: Makefile  assignment1wirteup.tex  prodcons-pthd.c  qsort-pthd.c  qsort.c  task-queue.h
assignments/2/: CMakeLists.txt  qsort-pthd  results  runner  runnerseq
assignments/2/adaResults/: prime-ompResults  primeResults  qsort-ompResults  qsort-pthdResults  qsortResults
assignments/2/babbageResults/: prime-ompResults  primeResults  qsort-ompResults  qsort-pthdResults  qsortResults
assignments/2/build2/: CMakeCache.txt  Makefile  cmake_install.cmake  prime  prime-omp  qsort  qsort-omp  qsort-ompResults  qsort-pthd  qsort-pthdResults  runner
assignments/2/src/: Makefile  prime-omp.c  qsort-omp.c
assignments/2/submit/: Makefile  prime-omp.c  qsort-omp.c
assignments/2/submit/qsortPthd/: Makefile  qsort-pthd.c
assignments/2/writeup/: 2.tex  a.py  prOmp  prRE  qsortOMP  qsortOmp  qsortPTHD  qsortPthd
assignments/3/: CMakeLists.txt  results  resultsSend  rr
assignments/3/datasets/: data.txt  data100.txt  data1000.txt  data125.txt  data150.txt  data175.txt  data250.txt  data40.txt  data500.txt  dataM.txt
assignments/3/src/: extsort.c  fileOut.c
assignments/3/submit/: Makefile  extsort.c  ring.c
assignments/3/writeup/: 3.tex  a.py  parser.py  prec  prec.csv  results  results.csv
assignments/4/src/: .gitignore  Makefile  crunner  distr_runner  dmap2.chpl  jacobi-shm.chpl  jacobi-shm0.chpl  jacobi.c  laplace-distr.chpl  laplace-shm.chpl  laplace.c  seq_runner  shm_runner
assignments/4/src/examples/: chapelSolution.chpl  test.chpl
assignments/4/src/lab8material/: dmap1.chpl
assignments/4/src/submit/: Makefile  laplace-distr.chpl  laplace-shm.chpl  laplace.c
assignments/4/writeup/: 4.tex  perf
lab1/: .gitignore  Makefile  mpihosts  prep-mpi  sum  sum-mpi  sum-mpi.c  sum-omp  sum-pthd  sum-pthd.c  sum.c  sum1  sum1_real  sum2  sum2_real
lab2/: Makefile  arraysum-pthd.c  condvar-pthd.c  mtxmul-pthd2.c
lab3/: Makefile  arraysum.c  mtxmul.c
labs/: .gitignore
labs/1/: Makefile  prep-chapl  pt  pt.c  sum-mpi.c  sum-omp.c  sum-pthd.c  sum1.chpl  sum2.chpl
labs/2/: .gitignore  Makefile  arraysum-pthd  arraysumTester  condvar-pthd  mtxmul-pthd  mtxmul-pthd.c  mtxmul-pthd2
labs/3/: .gitignore  arraysum.c  demo.c
labs/6/: CMakeLists.txt  data.txt  fileIn.c  mpihosts-S16  prep-mpi
labs/7/: CMakeLists.txt  Makefile  hello  hello.chpl  prodcons  prodcons.chpl  sum-chpl.chpl  task-queue.chpl
labs/8/: .gitignore  Makefile  border.chpl  explanations.txt  locale1.chpl  locale2.chpl  locale3.chpl  locale4.chpl  locales.chpl
labs/9/: task2  task2.chpl
material/: Table of Contents.html
test/: .test.c.swp  Makefile  test  test.c
